--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul>
             <h2>Travel Planner</h2>
             <p class="spacer"></p>
-            <li class="selected"><a href="overview.html">Overview</a></li>
-            <li><a href="index.html">Timeline</a></li>
+            <li class="selected"><a href="index.html">Overview</a></li>
+            <li><a href="timeline.html">Timeline</a></li>
         </ul>
     </nav>
     <div class="container">
