style file updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <h1>Maui</h1>
 
-        <div class="span-7 img"><img src="img/maui.jpg" /> </div>
+        <div class="span-7 img"><img src="cparece.github.io/img/maui.JPG" /> </div>
 
         <!-- use hidden input for toggling sections-->
         <input id="toggle-2" type="checkbox" class="hidden" checked/>
@@ -54,7 +54,7 @@
         </label>
 
         <div class="col-6-layout center" id="section-2">
-            <div class="span-2 span-row-6 img"><img src="img/flight.jpg" /> </div>
+            <div class="span-2 span-row-6 img"><img src="cparece.github.io/img/flight.JPG" /> </div>
             <div class="span-4 header">Hawaiian Airlines Flight #1</div>
 
             <div class="field span-1">
@@ -184,7 +184,7 @@
         <div class="col-6-layout" id="section-4">
 
             <div class="span-4 header">Hawaiian Airlines Flight #3</div>
-            <div class="span-2 span-row-3 img"><img src="img/flight-02.jpg" /> </div>
+            <div class="span-2 span-row-3 img"><img src="cparece.github.io/img/flight-02.JPG" /> </div>
 
             <div class="field span-1">
                 <label>Confirmation</label>
