style file updates

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
         <h1>Oahu</h1>
 
-        <div class="span-7 img"><img src="img/skyline.jpg" /> </div>
+        <div class="span-7 img"><img src="cparece.github.io/img/skyline.JPG" /> </div>
 
         <input id="toggle-4" type="checkbox" class="hidden" checked/>
         <label for="toggle-4" class="span-7 divider flight">
