--- a/timeline.html
+++ b/timeline.html
@@ -107,7 +107,6 @@
                 <h3 class="header">Monday</h3>
                 <hr>
                 <div class="flex event activity">
-
                     <p>Helicopter Tour</p>
                 </div>
             </div>
@@ -162,7 +161,9 @@
                 <div>May 04</div>
                 <h3 class="header">Saturday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event activity">
+                    <p>Snorkle Trip</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
@@ -178,7 +179,15 @@
                 <div>May 06</div>
                 <h3 class="header">Monday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event activity">
+                    <p>North Shore</p>
+                </div>
+                <div class="flex event activity">
+                    <p>Skydive</p>
+                </div>
+                <div class="flex event activity">
+                    <p>PM Hike</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
@@ -186,7 +195,9 @@
                 <div>May 07</div>
                 <h3 class="header">Tuesday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event activity">
+                    <p>Stairway to Heaven</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
@@ -194,7 +205,9 @@
                 <div>May 08</div>
                 <h3 class="header">Wednesday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event activity">
+                    <p>Hotel Pool Snorkel</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
