--- a/timeline.html
+++ b/timeline.html
@@ -63,7 +63,6 @@
                     <p>10a-5:19p </br>JFK to OGG</p>
                 </div>
                 <div class="flex event hotel">
-
                     <p>Hyatt Regency Maui</p>
                 </div>
             </div>
@@ -73,8 +72,10 @@
                 <div>Apr 26</div>
                 <h3 class="header">Friday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Hyatt Regency Maui</p>
+                </div>
                 <div class="flex event activity">
-
                     <p>Mount Haleakala</p>
                 </div>
             </div>
@@ -84,8 +85,10 @@
                 <div>Apr 27</div>
                 <h3 class="header">Saturday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Hyatt Regency Maui</p>
+                </div>
                 <div class="flex event activity">
-
                     <p>Travel with Local</p>
                 </div>
             </div>
@@ -95,8 +98,10 @@
                 <div>Apr 28</div>
                 <h3 class="header">Sunday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Hyatt Regency Maui</p>
+                </div>
                 <div class="flex event activity">
-
                     <p>Road to Hana</p>
                 </div>
             </div>
@@ -106,6 +111,9 @@
                 <div>Apr 29</div>
                 <h3 class="header">Monday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Hyatt Regency Maui</p>
+                </div>
                 <div class="flex event activity">
                     <p>Helicopter Tour</p>
                 </div>
@@ -116,8 +124,8 @@
                 <div>Apr 30</div>
                 <h3 class="header">Tuesday</h3>
                 <hr>
-                <div class="flex event hotel">
 
+                <div class="flex event hotel">
                     <p>The Ritz-Carlton</p>
                 </div>
             </div>
@@ -127,9 +135,14 @@
                 <div>May 01</div>
                 <h3 class="header">Wednesday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>The Ritz-Carlton</p>
+                </div>
                 <div class="flex event activity">
-
                     <p>Snorkel Trip</p>
+                </div>
+                <div class="flex event activity">
+                    <p>Sunset Cruise</p>
                 </div>
             </div>
         </div>
@@ -143,7 +156,6 @@
                     <p>1:16p-1:58p</br> OGG to HNL</p>
                 </div>
                 <div class="flex event hotel">
-
                     <p>Aulani</p>
                 </div>
             </div>
@@ -153,7 +165,9 @@
                 <div>May 03</div>
                 <h3 class="header">Friday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
@@ -161,6 +175,9 @@
                 <div>May 04</div>
                 <h3 class="header">Saturday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
                 <div class="flex event activity">
                     <p>Snorkle Trip</p>
                 </div>
@@ -171,7 +188,9 @@
                 <div>May 05</div>
                 <h3 class="header">Sunday</h3>
                 <hr>
-                <p></p>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
             </div>
         </div>
         <div class="span-1  date">
@@ -179,6 +198,9 @@
                 <div>May 06</div>
                 <h3 class="header">Monday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
                 <div class="flex event activity">
                     <p>North Shore</p>
                 </div>
@@ -195,6 +217,9 @@
                 <div>May 07</div>
                 <h3 class="header">Tuesday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
                 <div class="flex event activity">
                     <p>Stairway to Heaven</p>
                 </div>
@@ -205,6 +230,9 @@
                 <div>May 08</div>
                 <h3 class="header">Wednesday</h3>
                 <hr>
+                <div class="flex event hotel">
+                    <p>Aulani</p>
+                </div>
                 <div class="flex event activity">
                     <p>Hotel Pool Snorkel</p>
                 </div>
