--- a/index.html
+++ b/index.html
@@ -14,279 +14,258 @@
 <body>
     <nav class="nav span-7">
         <ul>
-            <h2>Travel Planner</h2>
+            <h2 class="column">Travel Planner</h2>
             <p class="spacer"></p>
             <li class="selected"><a href="index.html">Overview</a></li>
             <li><a href="timeline.html">Timeline</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="span-7 header">
+    <div class="container content">
+        <header class="span-7 column">
             <h1>Hawaii 2019</h1>
             <h2>April 25 - May 10</h2>
-        </div>
-        <input id="toggle-1" type="checkbox" class="hidden" checked/>
-        <label for="toggle-1" class="span-7 divider">
-            <div>Overview</div>
-            <p class="spacer"></p>
+        </header>
+        <label class="divider column">
+            Overview
         </label>
-        <div class="col-6-layout" id="section-1">
-            <div class="span-6">Congratulations on booking your vacation to Hawaii! During your vacation, you will be staying at some of the most exquisite hotels Hawaii has to offer. You will adventure through different climates, as you venture through the different parts
-                of the islands.
-                </br>
-                </br> First you will enjoy relaxing on the world-famous beaches, hiking through the illustrious valleys, rainforests and waterfalls that Maui has to offer. Then you will hop over to Oahu where you can see the famous Pearl Harbor, as well as,
-                surf with the locals in Waikiki and swim with the sea turtles in the North Shore!
-                </br>
-
-            </div>
-            <!-- <div class="span-2 img"><img src="img/hawaii.jpg" /> </div> -->
-
+        <div class="column col-12-layout">
+            Congratulations on booking your vacation to Hawaii! During your vacation, you will be staying at some of the most exquisite hotels Hawaii has to offer. You will adventure through different climates, as you venture through the different parts of the islands.
+            </br>
+            </br> First you will enjoy relaxing on the world-famous beaches, hiking through the illustrious valleys, rainforests and waterfalls that Maui has to offer. Then you will hop over to Oahu where you can see the famous Pearl Harbor, as well as, surf
+            with the locals in Waikiki and swim with the sea turtles in the North Shore!
+            </br>
         </div>
-        <h1>Maui</h1>
+        <h1 class="column">Maui</h1>
 
-        <div class="span-7 img"><img src="cparece.github.io/img/maui.JPG" /> </div>
+        <div class="col-12-layout img column"><img src="cparece.github.io/img/maui.JPG" /> </div>
 
-        <!-- use hidden input for toggling sections-->
-        <input id="toggle-2" type="checkbox" class="hidden" checked/>
-        <label for="toggle-2" class="span-7 divider flight">
-            <div>Flight To Maui (2) </div>
-             <p class="spacer"></p>
+        <label class="divider flight column">
+          Flight To Maui (2) 
         </label>
+        <div class="container small">
+            <div class="column container small img"><img class="column" src="cparece.github.io/img/flight.JPG" /> </div>
 
-        <div class="col-6-layout center" id="section-2">
-            <div class="span-2 span-row-6 img"><img src="cparece.github.io/img/flight.JPG" /> </div>
-            <div class="span-4 header">Hawaiian Airlines Flight #1</div>
+            <div class="column container small">
+                <div class="header column">Hawaiian Airlines Flight #1</div>
 
-            <div class="field span-1">
+                <div class="field column">
+                    <label>Confirmation</label>
+                    <p>DMOSPX1</p>
+                </div>
+                <div class="field column">
+                    <label>Date</label>
+                    <p>April 25, 2019</p>
+                </div>
+                <div class="field column">
+                    <label>Time</label>
+                    <p>10:00am</p>
+                </div>
+                <div class="field column">
+                    <label>Duration</label>
+                    <p>11hr 15m</p>
+                </div>
+                <div class="field column">
+                    <label>Location</label>
+                    <p>JFK to HNL</p>
+                </div>
+                <div class="field column">
+                    <label>Seats</label>
+                    <p>17A, 17B</p>
+                </div>
+                <div class="header column">Hawaiian Airlines Flight #2</div>
 
-                <label>Confirmation</label>
-                <p>DMOSPX1</p>
-            </div>
-            <div class="field span-1">
-                <label>Date</label>
-                <p>April 25, 2019</p>
-            </div>
-            <div class="field span-1">
-                <label>Time</label>
-                <p>10:00am</p>
-            </div>
-            <div class="field span-1">
-                <label>Duration</label>
-                <p>11hr 15m</p>
-            </div>
-            <div class="field span-1">
-                <label>Location</label>
-                <p>JFK to HNL</p>
-            </div>
-            <div class="field span-1">
-                <label>Seats</label>
-                <p>17A, 17B</p>
-            </div>
-            <div class="span-4 header">Hawaiian Airlines Flight #2</div>
-
-            <div class="field span-1">
-                <label>Confirmation</label>
-                <p>DMOSPX2</p>
-            </div>
-            <div class="field span-1">
-                <label>Date</label>
-                <p>April 25, 2019</p>
-            </div>
-            <div class="field span-1">
-                <label>Time</label>
-                <p>4:37pm</p>
-            </div>
-            <div class="field span-1">
-                <label>Duration</label>
-                <p>42m</p>
-            </div>
-            <div class="field span-1">
-                <label>Location</label>
-                <p>HNL to OGG</p>
-            </div>
-            <div class="field span-1">
-                <label>Seats</label>
-                <p>6C, 6D</p>
+                <div class="field column">
+                    <label>Confirmation</label>
+                    <p>DMOSPX2</p>
+                </div>
+                <div class="field column">
+                    <label>Date</label>
+                    <p>April 25, 2019</p>
+                </div>
+                <div class="field column">
+                    <label>Time</label>
+                    <p>4:37pm</p>
+                </div>
+                <div class="field column">
+                    <label>Duration</label>
+                    <p>42m</p>
+                </div>
+                <div class="field column">
+                    <label>Location</label>
+                    <p>HNL to OGG</p>
+                </div>
+                <div class="field column">
+                    <label>Seats</label>
+                    <p>6C, 6D</p>
+                </div>
             </div>
         </div>
 
-        <input id="toggle-3" type="checkbox" class="hidden" checked/>
-        <label for="toggle-3" class="span-7 divider hotel">
-            <div>Hotels in Maui (2)</div>
-            <p class="spacer"></p>
-
+        <label class="column divider hotel">
+            Hotels in Maui (2)
         </label>
-        <div class="col-6-layout" id="section-3">
-            <div class="span-6 header">Hyatt Regency Maui Resort And Spa </div>
+        <div class="container">
+            <div class="column header">Hyatt Regency Maui Resort And Spa </div>
 
-            <div class="field span-1">
+            <div class="field column">
                 <label>Confirmation</label>
                 <p>7388494178130</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Date</label>
                 <p>April 25 - April 30, 2019</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Check In Time</label>
                 <p>4:00 PM</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Check Out Time</label>
                 <p>11:00 AM</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Location</label>
                 <p>200 Nohea Kai Dr, Lahaina, HI 96761</p>
             </div>
 
-            <div class="field span-1">
+            <div class="field column">
                 <label>Phone Number</label>
                 <p>(808) 661-1234</p>
             </div>
-            <div class="span-6 header">The Ritz-Carlton, Kapalua</div>
+            <div class="column header">The Ritz-Carlton, Kapalua</div>
 
-            <div class="field span-1">
+            <div class="field column">
                 <label>Confirmation</label>
                 <p>7395238092160</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Date</label>
                 <p>April 30 - May 2, 2019</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Check In Time</label>
                 <p>4:00 PM</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Check Out Time</label>
                 <p>11:00 AM</p>
             </div>
-            <div class="field span-1">
+            <div class="field column">
                 <label>Location</label>
                 <p>1 Ritz Carlton Dr, Lahaina, HI 96761</p>
             </div>
 
-            <div class="field span-1">
+            <div class="field column">
                 <label>Phone Number</label>
                 <p>(808)669-6200</p>
             </div>
         </div>
-        <h1>Oahu</h1>
+        <h1 class="column">Oahu</h1>
 
-        <div class="span-7 img"><img src="cparece.github.io/img/skyline.JPG" /> </div>
+        <div class="col-12-layout img column"><img src="cparece.github.io/img/skyline.JPG" /> </div>
 
-        <input id="toggle-4" type="checkbox" class="hidden" checked/>
-        <label for="toggle-4" class="span-7 divider flight">
-            <div>Flight to Oahu</div>
-             <p class="spacer"></p>
+
+        <label class="column divider flight">
+           Flight to Oahu
         </label>
-        <div class="col-6-layout" id="section-4">
+        <div class="container small">
+            <div class="container column small img"><img class="column" src="cparece.github.io/img/flight-02.JPG" /> </div>
+            <div class="column container small">
+                <div class="column header">Hawaiian Airlines Flight #3</div>
 
-            <div class="span-4 header">Hawaiian Airlines Flight #3</div>
-            <div class="span-2 span-row-3 img"><img src="cparece.github.io/img/flight-02.JPG" /> </div>
+                <div class="field column">
+                    <label>Confirmation</label>
+                    <p>DMOSPX3</p>
+                </div>
+                <div class="field column">
+                    <label>Date</label>
+                    <p>May 2, 2019</p>
+                </div>
+                <div class="field column">
+                    <label>Time</label>
+                    <p>1:16pm</p>
+                </div>
 
-            <div class="field span-1">
-                <label>Confirmation</label>
-                <p>DMOSPX3</p>
+                <div class="field column">
+                    <label>Duration</label>
+                    <p>42m</p>
+                </div>
+                <div class="field column">
+                    <label>Location</label>
+                    <p>HNL to OGG</p>
+                </div>
+                <div class="field column">
+                    <label>Seats</label>
+                    <p>7A, 7B</p>
+                </div>
             </div>
-            <div class="field span-1">
-                <label>Date</label>
-                <p>May 2, 2019</p>
-            </div>
-            <div class="field span-1">
-                <label>Time</label>
-                <p>1:16pm</p>
-            </div>
+        </div>
+        <label class="column divider hotel">
+            Hotel in Oahu
+        </label>
 
-            <div class="field span-1">
-                <label>Duration</label>
-                <p>42m</p>
-            </div>
-            <div class="field span-1">
-                <label>Location</label>
-                <p>HNL to OGG</p>
-            </div>
-            <div class="field span-1">
-                <label>Seats</label>
-                <p>7A, 7B</p>
-            </div>
 
+        <div class="column header">Aulani, A Disney Resort & Spa</div>
+
+        <div class="field column">
+            <label>Confirmation</label>
+            <p>7395238092XW2</p>
+        </div>
+        <div class="field column">
+            <label>Date</label>
+            <p>May 2 - May 9, 2019</p>
+        </div>
+        <div class="field column">
+            <label>Check In Time</label>
+            <p>4:00 PM</p>
+        </div>
+        <div class="field column">
+            <label>Check Out Time</label>
+            <p>11:00 AM</p>
+        </div>
+        <div class="field column">
+            <label>Location</label>
+            <p>92-1185 Ali'inui Dr, Kapolei, HI 96707</p>
         </div>
 
-        <input id="toggle-5" type="checkbox" class="hidden" checked />
-        <label for="toggle-5" class="span-7 divider hotel">
-            <div>Hotel in Oahu</div>
-             <p class="spacer"></p>
-        </label>
-        <div class="col-6-layout" id="section-5">
-            <div class="span-6 header">Aulani, A Disney Resort & Spa</div>
-
-            <div class="field span-1">
-                <label>Confirmation</label>
-                <p>7395238092XW2</p>
-            </div>
-            <div class="field span-1">
-                <label>Date</label>
-                <p>May 2 - May 9, 2019</p>
-            </div>
-            <div class="field span-1">
-                <label>Check In Time</label>
-                <p>4:00 PM</p>
-            </div>
-            <div class="field span-1">
-                <label>Check Out Time</label>
-                <p>11:00 AM</p>
-            </div>
-            <div class="field span-1">
-                <label>Location</label>
-                <p>92-1185 Ali'inui Dr, Kapolei, HI 96707</p>
-            </div>
-
-            <div class="field span-1">
-                <label>Phone Number</label>
-                <p>(866)443-4763</p>
-            </div>
-
+        <div class="field column">
+            <label>Phone Number</label>
+            <p>(866)443-4763</p>
         </div>
 
-        <input id="toggle-6" type="checkbox" class="hidden" checked/>
-        <label for="toggle-6" class="span-7 divider flight">
-            <div>Flight to New York</div>
-             <p class="spacer"></p>
+
+        <label class="column divider flight">
+            Flight to New York
         </label>
-        <div class="col-6-layout" id="section-6">
 
-            <div class="span-6 header">Hawaiian Airlines Flight #4</div>
+        <div class="column header">Hawaiian Airlines Flight #4</div>
 
-            <div class="field span-1">
-                <label>Confirmation</label>
-                <p>DMOSPX4</p>
-            </div>
-            <div class="field span-1">
-                <label>Date</label>
-                <p>May 9, 2019 (+1 Day)</p>
-            </div>
-            <div class="field span-1">
-                <label>Time</label>
-                <p>3:10pm</p>
-            </div>
-
-            <div class="field span-1">
-                <label>Duration</label>
-                <p>9hr 45m</p>
-            </div>
-            <div class="field span-1">
-                <label>Location</label>
-                <p>HNL to JFK</p>
-            </div>
-            <div class="field span-1">
-                <label>Seats</label>
-                <p>17A, 17B</p>
-            </div>
-
-
+        <div class="field column">
+            <label>Confirmation</label>
+            <p>DMOSPX4</p>
         </div>
+        <div class="field column">
+            <label>Date</label>
+            <p>May 9, 2019 (+1 Day)</p>
+        </div>
+        <div class="field column">
+            <label>Time</label>
+            <p>3:10pm</p>
+        </div>
+
+        <div class="field column">
+            <label>Duration</label>
+            <p>9hr 45m</p>
+        </div>
+        <div class="field column">
+            <label>Location</label>
+            <p>HNL to JFK</p>
+        </div>
+        <div class="field column">
+            <label>Seats</label>
+            <p>17A, 17B</p>
+        </div>
+
     </div>
 
 
@@ -295,9 +274,3 @@
 </body>
 
 </html>
-
-<!-- TODO: navigation bar that links relevant pages together, avaliable on all pages of the website-->
-
-<!-- TODO: Write your own content -->
-
-<!-- TODO: Validate code-->
