--- a/timeline.html
+++ b/timeline.html
@@ -12,19 +12,19 @@
 <body>
     <nav class="nav span-7">
         <ul>
-            <h2>Travel Planner</h2>
+            <h2 class="column">Travel Planner</h2>
             <p class="spacer"></p>
             <li><a href="index.html">Overview</a></li>
             <li class="selected"><a href="timeline.html">Timeline</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="span-7 header">
+    <div class="container content">
+        <header class="column">
             <h1>Hawaii 2019</h1>
             <h2>April 25 - May 10</h2>
-        </div>
+        </header>
 
-        <div class="span-1 date fade">
+        <div class="column date fade">
             <div class="list">
                 <div>Apr 21</div>
                 <h3 class="header">Sunday</h3>
@@ -32,28 +32,28 @@
                 <p>Easter</p>
             </div>
         </div>
-        <div class="span-1  date fade">
+        <div class="column date fade">
             <div class="list">
                 <div>Apr 22</div>
                 <h3 class="header">Monday</h3>
                 <hr>
             </div>
         </div>
-        <div class="span-1  date fade">
+        <div class="column date fade">
             <div class="list">
                 <div>Apr 23</div>
                 <h3 class="header">Tuesday</h3>
                 <hr>
             </div>
         </div>
-        <div class="span-1  date fade">
+        <div class="column date fade">
             <div class="list">
                 <div>Apr 24</div>
                 <h3 class="header">Wednesday</h3>
                 <hr>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 25</div>
                 <h3 class="header">Thursday</h3>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 26</div>
                 <h3 class="header">Friday</h3>
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 27</div>
                 <h3 class="header">Saturday</h3>
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 28</div>
                 <h3 class="header">Sunday</h3>
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 29</div>
                 <h3 class="header">Monday</h3>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>Apr 30</div>
                 <h3 class="header">Tuesday</h3>
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 01</div>
                 <h3 class="header">Wednesday</h3>
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 02</div>
                 <h3 class="header">Thursday</h3>
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 03</div>
                 <h3 class="header">Friday</h3>
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 04</div>
                 <h3 class="header">Saturday</h3>
@@ -183,7 +183,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 05</div>
                 <h3 class="header">Sunday</h3>
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 06</div>
                 <h3 class="header">Monday</h3>
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 07</div>
                 <h3 class="header">Tuesday</h3>
@@ -225,7 +225,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 08</div>
                 <h3 class="header">Wednesday</h3>
@@ -238,7 +238,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 09</div>
                 <h3 class="header">Thursday</h3>
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list">
                 <div>May 10</div>
                 <h3 class="header">Friday</h3>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </div>
-        <div class="span-1  date">
+        <div class="column date">
             <div class="list fade">
                 <div>May 11</div>
                 <h3 class="header">Saturday</h3>
