--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </div>
         <h1 class="column">Maui</h1>
 
-        <div class="col-12-layout img column"><img src="cparece.github.io/img/maui.JPG" /> </div>
+        <div class="col-12-layout img column"><img width="100%" src="cparece.github.io/img/maui.JPG" /> </div>
 
         <label class="divider flight column">
           Flight To Maui (2) 
         </label>
         <div class="container small">
-            <div class="column container small img"><img class="column" src="cparece.github.io/img/flight.JPG" /> </div>
+            <div class="column container small img"><img class="column" height="100%" width="50%" src="cparece.github.io/img/flight.JPG" /> </div>
 
             <div class="column container small">
                 <div class="header column">Hawaiian Airlines Flight #1</div>
@@ -160,14 +160,14 @@
         </div>
         <h1 class="column">Oahu</h1>
 
-        <div class="col-12-layout img column"><img src="cparece.github.io/img/skyline.JPG" /> </div>
+        <div class="col-12-layout img column"><img width="100%" src="cparece.github.io/img/skyline.JPG" /> </div>
 
 
         <label class="column divider flight">
            Flight to Oahu
         </label>
         <div class="container small">
-            <div class="container column small img"><img class="column" src="cparece.github.io/img/flight-02.JPG" /> </div>
+            <div class="container column small img"><img width="50%" height="100%" class="column" src="cparece.github.io/img/flight-02.JPG" /> </div>
             <div class="column container small">
                 <div class="column header">Hawaiian Airlines Flight #3</div>
 
