--- a/timeline.html
+++ b/timeline.html
@@ -1,10 +1,10 @@
 <!-- Index.html -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset- "UTF-8">
+    <meta charset="UTF-8">
     <title>Client Admin Site</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
