--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Assignment 3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="uikit-3.1.4/css/uikit.min.css" />
@@ -11,11 +11,6 @@
 </head>
 
 <body>
-    <style>
-        .test {
-            background: red;
-        }
-    </style>
     <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
         <nav class="uk-navbar-container">
             <div class="uk-navbar-left">
@@ -111,27 +106,6 @@
                         <ul class="uk-slideshow-items uk-height-large">
                             <li>
                                 <img data-src="https://images.pexels.com/photos/1024975/pexels-photo-1024975.jpeg?cs=srgb&dl=affair-anniversary-asad-1024975.jpg&fm=jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
-                                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                                    <div class="uk-margin-remove">
-                                        <article class="uk-comment">
-                                            <header class="uk-comment-header uk-grid-medium uk-flex-middle" uk-grid>
-                                                <div class="uk-width-auto">
-                                                    <img class="uk-comment-avatar" src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" width="25" height="25" alt="">
-                                                </div>
-                                                <div class="uk-width-expand">
-                                                    <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Author</a></h4>
-                                                    <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
-                                                        <li><a href="#">12 days ago</a></li>
-                                                    </ul>
-                                                </div>
-                                            </header>
-                                            <div class="uk-comment-body">
-                                                <p>text</p>
-                                            </div>
-                                        </article>
-                                    </div>
-
-                                </div>
                             </li>
                             <li>
                                 <img data-src="https://www.wallpaperup.com/uploads/wallpapers/2014/10/06/473386/c6b691f95a3bbebd5d9eaf037a396dbc-700.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !* +*">
