--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -105,7 +105,7 @@
 
                         <ul class="uk-slideshow-items uk-height-large">
                             <li>
-                                <img data-src="https://images.pexels.com/photos/1024975/pexels-photo-1024975.jpeg?cs=srgb&dl=affair-anniversary-asad-1024975.jpg&fm=jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
+                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
                             </li>
                             <li>
                                 <img data-src="https://www.wallpaperup.com/uploads/wallpapers/2014/10/06/473386/c6b691f95a3bbebd5d9eaf037a396dbc-700.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !* +*">
