--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -108,10 +108,10 @@
                                 <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
                             </li>
                             <li>
-                                <img data-src="https://www.wallpaperup.com/uploads/wallpapers/2014/10/06/473386/c6b691f95a3bbebd5d9eaf037a396dbc-700.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !* +*">
+                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !* +*">
                             </li>
                             <li>
-                                <img data-src="https://s2.best-wallpaper.net/wallpaper/2880x1800/1610/Palma-Maldives-sunset-beach-sea-palm-tree_2880x1800.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
+                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
                             </li>
                         </ul>
 
