--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -5,9 +5,10 @@
     <title>Assignment 3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="uikit-3.1.4/css/uikit.min.css" />
-    <script src="uikit-3.1.4/js/uikit.min.js"></script>
-    <script src="uikit-3.1.4/js/uikit-icons.min.js"></script>
+    <!-- <link rel="stylesheet" href="uikit/dist/css/uikit.min.css" /> -->
+    <link rel="stylesheet" href="custom.css" />
+    <script src="uikit/dist/js/uikit.min.js"></script>
+    <script src="uikit/dist/js/uikit-icons.min.js"></script>
 </head>
 
 <body>
@@ -15,35 +16,28 @@
         <nav class="uk-navbar-container">
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href="">Nav 1</a></li>
-                    <li><a href="" uk-icon="icon: chevron-down; ratio: .75">Nav 2</a></li>
+                    <li class="uk-active"><a href="index.html">Home</a></li>
+                    <li><a href="" uk-icon="icon: chevron-down; ratio: .75">Archives</a></li>
                     <div class="uk-width-large" uk-dropdown="mode: click; offset: -20">
                         <div class="uk-dropdown-grid uk-child-width-1-2@m" uk-grid>
                             <div>
                                 <ul class="uk-nav uk-dropdown-nav">
-                                    <li class="uk-active"><a href="#">Active</a></li>
-                                    <li><a href="#">Item</a></li>
-                                    <li class="uk-nav-header">Header</li>
-                                    <li><a href="#">Item</a></li>
-                                    <li><a href="#">Item</a></li>
+                                    <li class="uk-nav-header">Blog Posts</li>
+                                    <li><a href="#">January 12, 2019</a></li>
+                                    <li><a href="#">January 13, 2019</a></li>
+                                    <li><a href="#">January 14, 2019</a></li>
+                                    <li><a href="#">January 14, 2019</a></li>
                                     <li class="uk-nav-divider"></li>
-                                    <li><a href="#">Item</a></li>
-                                </ul>
-                            </div>
-                            <div>
-                                <ul class="uk-nav uk-dropdown-nav">
-                                    <li class="uk-active"><a href="#">Active</a></li>
-                                    <li><a href="#">Item</a></li>
-                                    <li class="uk-nav-header">Header</li>
-                                    <li><a href="#">Item</a></li>
-                                    <li><a href="#">Item</a></li>
-                                    <li class="uk-nav-divider"></li>
-                                    <li><a href="#">Item</a></li>
+                                    <li class="uk-nav-header">Dining Reviews</li>
+                                    <li><a href="">Disney Dining Plan</a></li>
+                                    <li><a href="">Chef Mickey's</a></li>
+                                    <li><a href="">Whispering Canyon</a></li>
+
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <li><a href="">Nav 3</a></li>
+                    <li><a href="form.html">Request a Quote</a></li>
                 </ul>
             </div>
         </nav>
@@ -52,9 +46,9 @@
     <div class="uk-container uk-padding">
         <h1 class="uk-heading-line uk-text-center"><span>Disney Adventures Blog</span></h1>
 
-        <div class="uk-grid-large uk-child-width-expand uk-grid-match uk-margin" uk-grid>
+        <div class="uk-grid-large uk-child-width-1-1@s uk-child-width-expand@m uk-grid-match uk-margin" uk-grid>
             <div>
-                <div class="uk-card uk-card-default uk-card-body  uk-padding-small">
+                <div class="uk-card uk-card-default uk-card-body uk-padding-small coco-card-primary">
                     <div class="uk-text-uppercase uk-text-primary">Latest News</div>
                     <ul uk-accordion="collapsible: false">
                         <li>
@@ -105,13 +99,13 @@
 
                         <ul class="uk-slideshow-items uk-height-large">
                             <li>
-                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
+                                <img data-src="img/img1.jpg" alt=" " uk-cover uk-img="target: !ul> :last-child, !* +*">
                             </li>
                             <li>
-                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !* +*">
+                                <img data-src="img/img2.jpg" alt="" uk-cover uk-img="target: !* -*, !* +*">
                             </li>
                             <li>
-                                <img data-src="https://github.com/cparece/cparece.github.io/blob/master/Assignment3/img/img1.jpg" width="1800" height="1200" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
+                                <img data-src="img/img3.jpg" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
                             </li>
                         </ul>
 
@@ -125,51 +119,8 @@
         </div>
 
     </div>
-    <div class="uk-section uk-section-primary uk-padding">
 
-        <div class="uk-child-width-expand" uk-grid>
-            <div>
-                <div uk-grid>
-                    <div class="uk-width-auto@m">
-                        <ul class="uk-tab-left" uk-tab="connect: #component-tab-left; animation: uk-animation-fade">
-                            <li><a href="#" class="uk-text-right">Active</a></li>
-                            <li><a href="#" class="uk-text-right">Item</a></li>
-                            <li><a href="#" class="uk-text-right">Item</a></li>
-                        </ul>
-                    </div>
-                    <div class="uk-width-expand">
-                        <ul id="component-tab-left" class="uk-switcher">
-                            <li>
-                                <article class="uk-article">
-                                    <h1 class="uk-article-title">Title</h1>
-                                    <p class="uk-article-meta">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                    </p>
-                                </article>
-                            </li>
-                            <li>
-                                <article class="uk-article">
-                                    <h1 class="uk-article-title">Title</h1>
-                                    <p class="uk-article-meta">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    </p>
-                                </article>
-                            </li>
-                            <li>
-                                <article class="uk-article">
-                                    <h1 class="uk-article-title">Title</h1>
-                                    <p class="uk-article-meta">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur, sed do eiusmod.
-                                    </p>
-                                </article>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-
-        <!-- 
+    <!-- 
             TODO: 
             2-3 pages using only UIKit
             
