--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -99,7 +99,7 @@
 
                         <ul class="uk-slideshow-items uk-height-large">
                             <li>
-                                <img data-src="img/img1.jpg" alt="" uk-cover uk-img="target: !ul> :last-child, !* +*">
+                                <img data-src="img/img.jpg" alt="" uk-cover uk-img="target: !ul> :last-child, !* +*">
                             </li>
                             <li>
                                 <img data-src="img/img2.jpg" alt="" uk-cover uk-img="target: !* -*, !* +*">
