--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -99,13 +99,13 @@
 
                         <ul class="uk-slideshow-items uk-height-large">
                             <li>
-                                <img data-src="img/img.jpg" alt="" uk-cover uk-img="target: !ul> :last-child, !* +*">
+                                <img data-src="img/img.jpg" src="https://cparece.github.io/cparece.github.io/Assignment3/img/img.jpg" alt="Disney Magic Kingdom" uk-cover uk-img="target: !ul> :last-child, !* +*">
                             </li>
                             <li>
-                                <img data-src="img/img2.jpg" alt="" uk-cover uk-img="target: !* -*, !* +*">
+                                <img data-src="img/img2.jpg" src="https://cparece.github.io/cparece.github.io/Assignment3/img/img2.jpg" alt="Disney Couple" uk-cover uk-img="target: !* -*, !* +*">
                             </li>
                             <li>
-                                <img data-src="img/img3.jpg" alt="" uk-cover uk-img="target: !* -*, !ul > :first-child">
+                                <img data-src="img/img3.jpg" src="https://cparece.github.io/cparece.github.io/Assignment3/img/img3.jpg" alt="Disney Couple" uk-cover uk-img="target: !* -*, !ul > :first-child">
                             </li>
                         </ul>
 
