--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <a href="cparece.github.io/Assignment3/index.html">assignment 3</a>
+    <a href="cparece.github.io/getting_started.html">WL Framework</a>
+
 </body>
 
 </html>
