--- a/getting_started.html
+++ b/getting_started.html
@@ -2,16 +2,13 @@
 <html>
 
 <head>
-    <title>Assignment 4</title>
+    <title>Wanderlust Framework 0.1 BETA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <div class="coco-header">
-        Text
-    </div>
+    <h1> Test </h1>
 </body>
 
 </html>
