--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                         <div class="cs-body">
                             There are two easy ways to get started! You may download the files or clone from github.</br>
                             </br>
-                            <strong>Download:</strong> <a href="">Click here</a> to begin your download.</br>
+                            <strong>Download:</strong> <a href="https://github.com/cparece/cparece.github.io/blob/master/styles.zip">Click here</a> to begin your download.</br>
                             </br>
                             <strong>Github:</strong>
-                            <code>git clone “github clone location”</code>
+                            <code>git clone “https://github.com/cparece/cparece.github.io/blob/master/styles.zip”</code>
                         </div>
-                        <div class="cs-actions"><button class="cs-btn primary">Download</button></div>
+                        <div class="cs-actions">
+                            <a href="https://github.com/cparece/cparece.github.io/blob/master/styles.zip"></a><button class="cs-btn primary">Download</button></a>
+                        </div>
                     </div>
 
                     <div class="cs-card cs-span-2 cs-span-6-m">
