--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
                             <strong>Download:</strong> <a href="https://github.com/cparece/cparece.github.io/blob/master/styles.zip">Click here</a> to begin your download.</br>
                             </br>
                             <strong>Github:</strong>
-                            <code>git clone “https://github.com/cparece/cparece.github.io/blob/master/styles.zip”</code>
+                            <code>git clone “github clone location”</code>
                         </div>
-                        <div class="cs-actions">
-                            <a href="https://github.com/cparece/cparece.github.io/blob/master/styles.zip"></a><button class="cs-btn primary">Download</button></a>
-                        </div>
+                        <div class="cs-actions"><button class="cs-btn primary">Download</button></div>
                     </div>
 
                     <div class="cs-card cs-span-2 cs-span-6-m">
