--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <strong>Github:</strong>
                             <code>git clone “github clone location”</code>
                         </div>
-                        <div class="cs-actions"><button class="cs-btn primary">Download</button></div>
+                        <div class="cs-actions"><a href="https://github.com/cparece/cparece.github.io/blob/master/styles.zip"><button class="cs-btn primary">Download</button></a></div>
                     </div>
 
                     <div class="cs-card cs-span-2 cs-span-6-m">
